merge: develop 브랜치에서 SSE/Notification 제외한 변경사항 선별 머지
- build.gradle 의존성 정리
- ScheduleRepository 최신화
- ErrorCode enum 업데이트
- TestSecurityConfig 최신화
- test application.yml 설정 업데이트
- UserService getCurrentUserFromJwt() 메서드 SecurityContext 기반으로 개선